<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:dropDownSelector="@color/colorAccent"
        android:dropDownWidth="@dimen/_40sdp"
        android:spinnerMode="dropdown"
        android:textColor="@color/white"
        android:entries="@array/bed_array"
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No. of Bed"
        android:textColor="@color/white"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner" />


    <EditText
        android:id="@+id/ed_fromDate"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:drawableRight="@drawable/ic_date_range_black_24dp"
        android:focusable="false"
        android:hint="02-11-2019"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#DBDBDB"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toStartOf="@+id/ed_toDate"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />


    <TextView
        android:focusable="false"
        android:singleLine="true"
        android:id="@+id/tvFromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="From:"
        android:textColor="@color/white"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/ed_fromDate"
        app:layout_constraintEnd_toEndOf="@+id/ed_fromDate"
        app:layout_constraintStart_toStartOf="@+id/ed_fromDate" />

    <EditText
        android:focusable="false"
        android:singleLine="true"
        android:textSize="@dimen/_10sdp"
        android:id="@+id/ed_toDate"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:drawableRight="@drawable/ic_date_range_black_24dp"
        android:hint="02-11-2019"
        android:textColor="@color/white"
        android:textColorHint="#DBDBDB"
        app:layout_constraintBottom_toBottomOf="@+id/ed_fromDate"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toEndOf="@+id/ed_fromDate"
        app:layout_constraintTop_toTopOf="@+id/ed_fromDate" />

    <TextView
        android:id="@+id/tvToDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To:"
        android:textColor="@color/white"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/ed_toDate"
        app:layout_constraintEnd_toEndOf="@+id/ed_toDate"
        app:layout_constraintStart_toStartOf="@+id/ed_toDate" />

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_search_black_24dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ed_toDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ed_toDate" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerApartment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />
</androidx.constraintlayout.widget.ConstraintLayout>